# disdiff_adapters

./: .gitignore  README.md  pyproject.toml
chada/: __init__.py
chada/args/: __init__.py  attn.py  knn.py  linear.py  pretrain.py  regression.py  umap.py
chada/backbones/vit/: chada_vit.py
chada/losses/: __init__.py
chada/methods/: __init__.py  base.py  dino.py  linear.py  regression.py
chada/utils/: __init__.py  auto_resumer.py  auto_umap.py  checkpointer.py  misc.py
disdiff_adaptaters/arch/: chada.py
disdiff_adaptaters/arch/chada/: chada.py
disdiff_adaptaters/arch/multi_distillme/: multi_distillme.py
disdiff_adaptaters/arch/vae/: __init__.py  ae.py  decoder.py  encoder.py  test.py  test_0.py  train.py  train_0.py  vae.py
disdiff_adaptaters/data_module/: __init__.py  bloodmnist.py  celeba.py  shapes3d.py
disdiff_adaptaters/dataset/: __init__.py  shapes3d.py
disdiff_adaptaters/loss/: loss.py
disdiff_adaptaters/metric/: __init__.py
disdiff_adaptaters/notebook/: HOW_TO_USE.ipynb  load_3dshapes.ipynb  play_pipeline.ipynb
disdiff_adaptaters/scripts/train/: train_vae.sh
disdiff_adaptaters/utils/: const.py  utils.py
disdiff_adapters/arch/chada/: chada.py
disdiff_adapters/arch/classifier/: __init__.py  classifier.py
disdiff_adapters/arch/factorvae/: __init__.py  factorvae.py
disdiff_adapters/arch/multi_distillme/: __init__.py  dev.py  multi_distillme.py  multi_distillme_dev.py  test.py  test_x.py  (+6 more)
disdiff_adapters/data_module/: __init__.py  bloodmnist.py  cars3d.py  celeba.py  dsprites.py  latent.py  mnist.py  mpi3d.py  shapes3d.py
disdiff_adapters/dataset/: __init__.py  bloodmnist.py  cars3d.py  celeba.py  dsprites.py  latent.py  mnist.py  mpi3d.py  shapes3d.py
disdiff_adapters/loss/: loss.py
disdiff_adapters/metric/: __init__.py  callbacks.py  dci.py  factorvae.py  factorvaelight.py  fid.py
disdiff_adapters/notebook/: HOW_TO_USE.ipynb  download_cars3d.ipynb  x_gen.ipynb
disdiff_adapters/utils/: const.py  utils.py
intern24/: relaxing_loss.py
(+11 files in other folders)
