[tool.poetry]
name = "disdiff-adaptaters"
version = "0.1.0"
description = ""
authors = ["amyara <alexandre.myara@telecom-sudparis.eu>"]
readme = "README.md"
packages = [{ include = "disdiff_adaptaters" }]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"
torch = "^2.7.0"
torchvision = "^0.22.0"
torchio = "^0.20.7"
torchaudio = "^2.7.0"
h5py = "^3.13.0"
lightning = "^2.5.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
