[project]
name = "disdiff-adapters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "datasets>=4.4.2",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "ruff>=0.14.10",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.17.0",
]
